--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
-/mysite
-/myvenv
+myvenv
 
-/webapp/logs
-/webapp/migrations
-/webapp/__pycache__
+webapp/logs
+__pycache__/
 
-/db.sqlite3
+db.sqlite3
